[package]
name = "linux_modules"
version = "0.3.3-alpha.0"
authors = ["Diana"]
edition = "2018"
#
description = "Tool To Manage Linux Kernel Modules"
documentation = "https://docs.rs/linux_modules"
repository = "https://github.com/DianaNites/linux_modules"
readme = "README.md"
keywords = ["linux", "kernel", "module"]
categories = ["os::unix-apis", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.3.22"
anyhow = "1.0.42"
comfy-table = "4.0.1"
linapi = "0.5.2"
quit = "1.1.4"
pager = "0.16.0"
once_cell = "1.8.0"

[[bin]]
path = "src/main.rs"
name = "nms"

[badges]
maintenance = { status = "experimental" }
