[package]
name = "linux_modules"
version = "0.3.3-alpha.0"
authors = ["Diana"]
edition = "2018"
#
description = "Tool To Manage Linux Kernel Modules"
documentation = "https://docs.rs/linux_modules"
repository = "https://github.com/DianaNites/linux_modules"
readme = "README.md"
keywords = ["linux", "kernel", "module"]
categories = ["os::unix-apis", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.71"
comfy-table = "5.0.1"
linapi = "0.5.2"
quit = "1.2.0"
pager = "0.16.1"
once_cell = "1.17.1"

[[bin]]
path = "src/main.rs"
name = "nms"

[badges]
maintenance = { status = "experimental" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "stable"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
