[package]
name = "linux_modules"
version = "0.3.6"
authors = ["Diana"]
edition = "2021"
#
description = "Tool To Manage Linux Kernel Modules"
documentation = "https://docs.rs/linux_modules"
repository = "https://github.com/DianaNites/linux_modules"
readme = "README.md"
keywords = ["linux", "kernel", "module"]
categories = ["os::unix-apis", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.2.23", features = ["derive", "color"] }
anyhow = "1.0.71"
comfy-table = "6.1.4"
# linapi = "0.6.0"
linapi = "0.6.0-alpha.0"
# linapi = { path = "../linapi" }
quit = "2.0.0"
pager = "0.16.1"
once_cell = "1.17.1"
clap_complete = "3.2.5"

[dev-dependencies]
assert_cmd = "2.0.11"
insta = { version = "1.29.0", features = ["yaml"] }

[[bin]]
path = "src/main.rs"
name = "nms"

[badges]
maintenance = { status = "experimental" }

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.0.7"
rust-toolchain-version = "stable"
ci = ["github"]
installers = []
targets = ["x86_64-unknown-linux-gnu"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
